Sat Apr 24 21:22:48 2004  George Edwards <g.edwards@vanderbilt.edu>

        Added files:
        * DnC/Config_Handlers/PC_Handler.h:
        * DnC/Config_Handlers/PC_Handler.cpp:
        * DnC/Config_Handlers/CompPkgDesc.h:
        * DnC/Config_Handlers/CompPkgDesc.cpp:

          Added new handlers for PackageConfiguration and ComponentPackageDescription.

Sat Apr 24 16:02:03 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handler/Domain_Handler.h:

          Added a header file for the new handler about to
          be written.

          This handler will parse the "Domain" type
          defined in the Deployment.xsd schema of the
          DnC specification.

Sat Apr 24 10:46:14 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handler/PCD_Handler.cpp:
        * DnC/Config_Handler/ERE_Handler.h:
        * DnC/Config_Handler/ERE_Handler.cpp:

          Missed out on these handlers in my earlier commit. Made the same
          changes as listed earlier for these handlers as well

Fri Apr 23 19:45:53 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handler/ADD_Handler.cpp:
        * DnC/Config_Handler/DP_Handler.cpp:
        * DnC/Config_Handler/CRDD_Handler.cpp:
        * DnC/Config_Handler/IDD_Handler.cpp:
        * DnC/Config_Handler/IRDD_Handler.cpp:
        * DnC/Config_Handler/MDD_Handler.cpp:
        * DnC/Config_Handler/RDD_Handler.cpp:
        * DnC/Config_Handler/PCD_Handler.cpp:
        * DnC/Config_Handler/DP_Handler.cpp:

          Eliminated the additional copy incurred when sequences are
          populated by de-referencing pointer to sequence return
          type. This fixes Andy's comments in the files that unearthed
          this problem. Please grep for Arvind: comments to see how the
          problem has been fixed

        * DnC/Config_Handler/Config_Handlers.mpc:

          Commented out DP_Handler.cpp from the list of files to be